[package]
name = "line-messaging-api-rust"
version = "0.1.0"
authors = ["uma <blog3170@gmail.com>"]

license = "MIT"
description = "LINE Messaging API Wrapper in Rust"
repository = "https://github.com/uma0317/line-messaging-api-rust"

[dependencies]
reqwest = "0.8.6"
rust-crypto = "^0.2"
rustc-serialize = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
futures = "0.1"
bytes = "0.4"