[package]
name = "line-messaging-api-rust"
version = "0.1.1"
authors = ["uma <blog3170@gmail.com>"]

license = "MIT"
description = "LINE Messaging API Wrapper in Rust"
repository = "https://github.com/uma0317/line-messaging-api-rust"

[dependencies]
reqwest = "0.8.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bytes = "0.4"
base64 = "0.9.2"
hmac = "0.6.2"
sha2 = "0.7.1"